--- a/src/YoloPersonDetectionAPI.csproj
+++ b/src/YoloPersonDetectionAPI.csproj
@@ -8,6 +8,7 @@
     <DockerfileContext>.</DockerfileContext>
     <LangVersion>12</LangVersion>
     <GenerateProgramFile>false</GenerateProgramFile>
+    <AssemblyVersion>1.2</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,15 +17,15 @@
     <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="NUnit" Version="4.2.2" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
-    <PackageReference Include="YoloV8" Version="5.2.0" />
+    <PackageReference Include="YoloSharp" Version="6.0.2" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Assets\yolo11n.onnx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Assets\yolov8s.onnx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="Assets\yolov8n-uint8.onnx">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Assets\Test\test_img_2_ppl.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
